--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <dependency>
             <groupId>org.estonlabs</groupId>
             <artifactId>coinbase-java-api</artifactId>
-            <version>1.1</version>
+            <version>1.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>info.picocli</groupId>
